# process-cloudfront-logs

./: .gitignore  .isort.cfg  CHANGELOG.md  Makefile  README.md  cloudformation.yml  process.py  pyproject.toml
scripts/: process_all.py
tests/: test_log.csv  test_process.py
